--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container my-4">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h2 class="text-center">Bookmar your favourite sites</h2>
+              <h2 class="text-center">Bookmarker your favourite sites</h2>
               <form id="myForm">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Site Name</label>
